@@ -45,12 +45,14 @@ class Page(widget.Widget):
         # document should pass us the page bounds
         x1, y1, x2, y2 = parentposn
 
+        painter.beginPaintingWidget(self)
         painter.save()
         painter.veusz_page_size = (x2-x1, y2-y1)
         painter.setClipRect( qt.QRect(x1, y1, x2-x1, y2-y1) )
         bounds = widget.Widget.draw(self, parentposn, painter,
                                     parentposn)
         painter.restore()
+        painter.endPaintingWidget()
 
         return bounds
 
