@@ -1,3 +1,8 @@
+* 2005-08-20 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Change drop down lists to use grey rather than red
+	- Allow user to click on widgets, and they are selected
+	in the widget tree
+	
 * 2005-08-03 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Add "scale" setting for TickLabels
 	
